<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpeakBird</string>
    <string name="mentions">Mentions</string>
    <string name="mention">mention</string>
    <string name="mentionedBy">mentioned by</string>
    <string name="messageBy">Message by</string>
    <string name="settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="message">Message</string>
    <string name="lastMention">Last mention by:</string>
    <string name="status">Status</string>
    <string name="dialogCheck">Without the authentication to Twitter or the Text to Speech libraries the application will not start</string>
    <string name="controllerAll">All mentions from the one clicked will play</string>
    <string name="controller">Just the mentions clicked will be played</string>
    <string name="preferenceSyncTitle">Sync</string>
    <string name="preferencebehavior">Behavior</string>
    <string name="preferencelanguage">Language</string>
    <string name="interval">Update Interval</string>
    <string name="minuts">In minutes</string>
    <string name="mode">Talk immediately upon arrival of a tweet or display a notification</string>
    <string name="modeTitle">Mode</string>
    <string name="speakNotifing">Speaks to report a new notification</string>
    <string name="speakNotifingTitle">Warns of a new notification</string>
    <string name="automaticSAP">Automatically switches to \"Speak as Pull\" mode when headphones are inserted</string>
    <string name="automaticSAPTitle">Headset</string>
    <string name="onMusic">Automatically switches to \"Speak as Pull\" mode when music or game is playing</string>
    <string name="onMusicTitle">Music</string>
    <string name="notificationSpeaking">Show a notification when the application is talking</string>
    <string name="notificationSpeakingTitle">Show notification</string>
    <string name="language">Force the voice to use a different language, by default voice will use the system language</string>
    <string name="languageTitle">Force a different language</string>
    <string name="autorize">Please authorize this app!</string>
    <string name="autorizeerror">Error on the authorization process</string>
    <string name="pause">Pause</string>
    <string name="controls">Controls</string>
    <string name="newm">New mention</string>
    <string name="isSpeaking">Speakbird is speaking</string>
    <string name="isSpeakingC">Speakbird is speaking - click to stop</string>
    <string name="wSpeaking">Speakbird wants to speak</string>
    <string name="top">Back to top</string>
    <string name="errorconnection">Connection not available</string>
    <string name="account_description">Sync frequency, mode, etc.</string>
    <string name="dialoginfo">Developed by Lorenzo Braghetto aka monossido\n monossido@lorenzobraghetto.com\n www.lorenzobraghetto.com\n\nGraphics designed by Federico Bressan\nhttp://studio73inc.com/</string>
    <string name="tap">Tap on the red icon(s) to fix</string>
    <string name="missing">Something is missing</string>
    <string name="newaccount">A SpeakBird account has been added to the Android account manager</string>
    <string name="automaticNotification">Automatically switches to \"Notification\" mode when silent mode is set</string>
    <string name="automaticNotificationTitle">Silent mode</string>
    <string name="have">You have</string>
    <string name="haveM">new mentions</string>
    <string name="haveMS">You have</string>
    <string name="haveMMS">new messages</string>
    <string name="syncing">Mentions Sync</string>
    <string name="syncingTitle">Mentions</string>
    <string name="syncingM">Messages Sync</string>
    <string name="syncingMTitle">Messages</string>
    <string name="errormentions">You have 0 mentions</string>
    <string name="errormessages">You have 0 messages</string>
    <string name="changelog"><b>0.3</b>\n\t-Direct Messages support!\n\t-Disable/Enable Sync for Mentions and/or Messages directly from Settings\n\tBug fix with Android Account\n\n<b>0.2</b>\n\t-(huge) bug fix\n\t
-Number of mention(s) in notification\n\t
-Number of mentions before start speaking\n\t
-New option, Automatically switches from SpeakasPull mode to Notification mode if ringtone is set to silent\n\n<b>0.1.1</b>\n\t-minor fix</string>
    <string name="license">SpeakBird is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.\n\n

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details. If not, see http://www.gnu.org/licenses/.\n\n

    You should have received a copy of the GNU General Public License
    along with this program.\n\n


Copyright 2012
	Lorenzo Braghetto monossido@lorenzobraghetto.com\n\n
	
	SpeakBird use the following open source libraries:\n\n

oauth-signpost:\n
http://code.google.com/p/oauth-signpost/ (signpost-commonshttp signpost-core)\n\n

twitter4j:\n
http://twitter4j.org/en/index.html\n\n

ActionBarSherlock:\n
http://actionbarsherlock.com/\n\n

Android-PullToRefresh:\n
https://github.com/chrisbanes/Android-PullToRefresh\n\n

UrlImageViewHelper:\n
https://github.com/koush/UrlImageViewHelper</string>

</resources>